--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -5,3 +5,10 @@ text.hatt = Hình ảnh tổn thương
 text.xetnghiem = Xét nghiệm
 text.tdcn = Thăm dò chức năng
  
+ text.SUR = Surgery
+ text.LAB = Laboratory
+ text.SP = Surgical Pathology
+ text.CT = CAT Scan
+ text.XRC = Cineradiograph
+ 
+ 
