--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -11,4 +11,7 @@ text.tdcn = Thăm dò chức năng
  text.CT = CAT Scan
  text.XRC = Cineradiograph
  
- 
+ gioitinh.nam = Nam
+ gioitinh.nu = Nữ
+ gioitinh.khac = Khác
+ gioitinh.khongxacdinh = Không xác định
