--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -11,6 +11,9 @@ text.tdcn = Thăm dò chức năng
  text.CT = CAT Scan
  text.XRC = Cineradiograph
  
+ text.HOS = Cơ sở khám bệnh
+ text.FAL = Khoa điều trị
+ 
  gioitinh.nam = Nam
  gioitinh.nu = Nữ
  gioitinh.khac = Khác
