--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -11,6 +11,8 @@ text.tdcn = Thăm dò chức năng
  text.CT = CAT Scan
  text.XRC = Cineradiograph
  
+ text.HSBA = Đợt khám bệnh
+ text.VK = Vào khoa
  text.HOS = Cơ sở khám bệnh
  text.FAL = Khoa điều trị
  
