--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -20,3 +20,5 @@ text.tdcn = Thăm dò chức năng
  gioitinh.nu = Nữ
  gioitinh.khac = Khác
  gioitinh.khongxacdinh = Không xác định
+ 
+ validate.required = Thông tin này là bắt buộc
