--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -22,3 +22,5 @@ text.tdcn = Thăm dò chức năng
  gioitinh.khongxacdinh = Không xác định
  
  validate.required = Thông tin này là bắt buộc
+ 
+ diagnosis.role.already.exist = Loại chẩn đoán đã tồn tại
