--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -21,6 +21,15 @@ text.tdcn = Thăm dò chức năng
  gioitinh.khac = Khác
  gioitinh.khongxacdinh = Không xác định
  
+ ylenh.dieutri = Thăm khám định kỳ
+ ylenh.thuoc = Chỉ định thuốc
+ ylenh.dvkt = Chỉ định dịch vụ kỹ thuật
+ 
+ thoidiem.sang = Sáng
+ thoidiem.trua = Trưa
+ thoidiem.chieu = Chiều
+ thoidiem.toi = Tối
+ 
  validate.required = Thông tin này là bắt buộc
  
  diagnosis.role.already.exist = Loại chẩn đoán đã tồn tại
