--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -25,10 +25,15 @@ text.tdcn = Thăm dò chức năng
  ylenh.thuoc = Chỉ định thuốc
  ylenh.dvkt = Chỉ định dịch vụ kỹ thuật
  
+ ylenh.thuoc.hienthi.template = %d thuốc
+ ylenh.dvkt.hienthi.template = Dịch vụ kỹ thuật: %s
+ 
  thoidiem.sang = Sáng
  thoidiem.trua = Trưa
  thoidiem.chieu = Chiều
  thoidiem.toi = Tối
+ 
+ 
  
  validate.required = Thông tin này là bắt buộc
  
