--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -26,7 +26,7 @@ text.tdcn = Thăm dò chức năng
  ylenh.dvkt = Chỉ định dịch vụ kỹ thuật
  
  ylenh.thuoc.hienthi.template = %d thuốc
- ylenh.dvkt.hienthi.template = Dịch vụ kỹ thuật: %s
+ ylenh.dvkt.hienthi.template = %d chỉ định dịch vụ
  
  thoidiem.sang = Sáng
  thoidiem.trua = Trưa
