--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -38,3 +38,6 @@ text.tdcn = Thăm dò chức năng
  validate.required = Thông tin này là bắt buộc
  
  diagnosis.role.already.exist = Loại chẩn đoán đã tồn tại
+ 
+ validate.password.required = Sai định dạng mật khẩu
+ validate.email.required = Sai định dạng email
