--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -41,3 +41,6 @@ text.tdcn = Thăm dò chức năng
  
  validate.password.required = Sai định dạng mật khẩu
  validate.email.required = Sai định dạng email
+ 
+ username.already.exist = Username đã tồn tại
+ 
