--- a/vn-ehealth-emr-service/src/main/resources/messages.properties
+++ b/vn-ehealth-emr-service/src/main/resources/messages.properties
@@ -43,4 +43,5 @@ text.tdcn = Thăm dò chức năng
  validate.email.required = Sai định dạng email
  
  username.already.exist = Username đã tồn tại
+ code.already.exist = Mã đã tồn tại
  
